--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Min Afrikanske Farm</title>
+    <title>Det Store PandeKageKup</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -18,11 +18,11 @@
         <div id="forgrund2"></div>
         <div id="game_elements">
           <div id="hul_container_1" class="hole pos1">
-            <div id="hul1_sprite" class="hest delay1"></div>
+            <div id="hul1_sprite" class="hest delay2"></div>
           </div>
 
           <div id="hul_container_2" class="hole pos2">
-            <div id="hul2_sprite" class="politi delay2"></div>
+            <div id="hul2_sprite" class="ingenting"></div>
           </div>
 
           <div id="hul_container_3" class="hole pos3">
@@ -30,10 +30,10 @@
           </div>
 
           <div id="hul_container_4" class="hole pos4">
-            <div id="hul4_sprite" class="hest delay3"></div>
+            <div id="hul4_sprite" class="ingenting"></div>
           </div>
           <div id="hul_container_5" class="hole pos5">
-            <div id="hul5_sprite" class="hest"></div>
+            <div id="hul5_sprite" class="ingenting"></div>
           </div>
 
           <div id="hul_container_6" class="hole pos6">
@@ -41,15 +41,15 @@
           </div>
 
           <div id="hul_container_7" class="hole pos7">
-            <div id="hul7_sprite" class="politi delay1"></div>
+            <div id="hul7_sprite" class="ingenting"></div>
           </div>
 
           <div id="hul_container_8" class="hole pos8">
-            <div id="hul8_sprite" class="politi"></div>
+            <div id="hul8_sprite" class="politi delay1"></div>
           </div>
 
           <div id="hul_container_9" class="hole pos9">
-            <div id="hul9_sprite" class="politi"></div>
+            <div id="hul9_sprite" class="ingenting"></div>
           </div>
         </div>
         <div id="game_ui">
@@ -87,5 +87,20 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+      // function changeNisse(){
+      //   const nisser = [
+      //     'url("svgs/sigurd.svg")',
+      //     'url("svgs/saxo.svg")',
+      //     'url("svgs/saga.svg")'
+      //   ]
+
+      //   const nisse = document.querySelector(".hest")
+      //   const bgNisse = nisser[Math.floor(Math.random() * nisser.length)];
+      //   nisse.style.backgroundImage = bgNisse;
+      // }
+
+      // setInterval(changeNisse, 4200)
+    </script>
   </body>
 </html>
