--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <div id="time_sprite"></div>
         </div>
         <div id="game_background"></div>
-
         <div id="forgrund2"></div>
         <div id="game_elements">
           <div id="hul_container_1" class="hole pos1">
@@ -44,22 +43,28 @@
             <div id="hul6_sprite" class="politi delay1"></div>
           </div>
 
-          <div id="hul_container_7" class="hole pos7">
+          <div id="hul_container_7" class="hole">
             <div id="hul7_sprite" class="ingenting"></div>
           </div>
 
-          <div id="hul_container_8" class="hole pos8">
+          <div id="hul_container_8" class="hole">
             <div id="hul8_sprite" class="ingenting"></div>
           </div>
 
-          <div id="hul_container_9" class="hole pos9">
+          <div id="hul_container_9" class="hole">
             <div id="hul9_sprite" class="ingenting"></div>
           </div>
         </div>
         <div id="game_ui">
           <div id="score_board">
             <div class="saek"></div>
-            <div class="antal"></div>
+            <div class="antal">0</div>
+            <div class="plus1" id="plus1"></div>
+            <div class="plus2" id="plus2"></div>
+            <div class="plus3" id="plus3"></div>
+            <div class="minus1" id="minus1"></div>
+            <div class="minus2" id="minus2"></div>
+            <div class="minus3" id="minus3"></div>
           </div>
           <div id="energy_board">
             <div id="heart1" class="mistetliv"></div>
