--- a/index.html
+++ b/index.html
@@ -8,95 +8,96 @@
   </head>
 
   <body>
-    <div id="blackout">
-      <div id="blackout_text">
-        <p>Vend skærmen vandret for at spille!</p>
-      </div>
-    <div id="screen">
-      <div id="game">
-        <div id="time_container">
-          <div id="time_sprite"></div>
+    <div id="preloader"></div>
+      <div id="blackout">
+        <div id="blackout_text">
+          <p>Vend skærmen vandret for at spille!</p>
         </div>
-        <div id="game_background"></div>
-        <div id="forgrund2"></div>
-        <div id="game_elements">
-          <div id="hul_container_1" class="hole pos1">
-            <div id="hul1_sprite" class="hest delay2"></div>
+      <div id="screen" class="hideall">
+        <div id="game">
+          <div id="time_container">
+            <div id="time_sprite"></div>
           </div>
-
-          <div id="hul_container_2" class="hole pos2">
-            <div id="hul2_sprite" class="ingenting"></div>
+          <div id="game_background"></div>
+          <div id="forgrund2"></div>
+          <div id="game_elements">
+            <div id="hul_container_1" class="hole pos1">
+              <div id="hul1_sprite" class="hest delay2"></div>
+            </div>
+  
+            <div id="hul_container_2" class="hole pos2">
+              <div id="hul2_sprite" class="ingenting"></div>
+            </div>
+  
+            <div id="hul_container_3" class="hole pos3">
+              <div id="hul3_sprite" class="ingenting"></div>
+            </div>
+  
+            <div id="hul_container_4" class="hole pos4">
+              <div id="hul4_sprite" class="ingenting"></div>
+            </div>
+            <div id="hul_container_5" class="hole pos5">
+              <div id="hul5_sprite" class="ingenting"></div>
+            </div>
+  
+            <div id="hul_container_6" class="hole pos6">
+              <div id="hul6_sprite" class="politi delay1"></div>
+            </div>
+  
+            <div id="hul_container_7" class="hole">
+              <div id="hul7_sprite" class="ingenting"></div>
+            </div>
+  
+            <div id="hul_container_8" class="hole">
+              <div id="hul8_sprite" class="ingenting"></div>
+            </div>
+  
+            <div id="hul_container_9" class="hole">
+              <div id="hul9_sprite" class="ingenting"></div>
+            </div>
           </div>
-
-          <div id="hul_container_3" class="hole pos3">
-            <div id="hul3_sprite" class="ingenting"></div>
-          </div>
-
-          <div id="hul_container_4" class="hole pos4">
-            <div id="hul4_sprite" class="ingenting"></div>
-          </div>
-          <div id="hul_container_5" class="hole pos5">
-            <div id="hul5_sprite" class="ingenting"></div>
-          </div>
-
-          <div id="hul_container_6" class="hole pos6">
-            <div id="hul6_sprite" class="politi delay1"></div>
-          </div>
-
-          <div id="hul_container_7" class="hole">
-            <div id="hul7_sprite" class="ingenting"></div>
-          </div>
-
-          <div id="hul_container_8" class="hole">
-            <div id="hul8_sprite" class="ingenting"></div>
-          </div>
-
-          <div id="hul_container_9" class="hole">
-            <div id="hul9_sprite" class="ingenting"></div>
+          <div id="game_ui">
+            <div id="score_board">
+              <div class="saek"></div>
+              <div class="antal">0</div>
+              <div class="plus1" id="plus1"></div>
+              <div class="plus2" id="plus2"></div>
+              <div class="plus3" id="plus3"></div>
+              <div class="minus1" id="minus1"></div>
+              <div class="minus2" id="minus2"></div>
+              <div class="minus3" id="minus3"></div>
+            </div>
+            <div id="energy_board">
+              <div id="heart1" class="mistetliv"></div>
+              <div id="heart2" class="mistetliv"></div>
+              <div id="heart3" class="mistetliv"></div>
+            </div>
+            <div id="time_board"></div>
           </div>
         </div>
-        <div id="game_ui">
-          <div id="score_board">
-            <div class="saek"></div>
-            <div class="antal">0</div>
-            <div class="plus1" id="plus1"></div>
-            <div class="plus2" id="plus2"></div>
-            <div class="plus3" id="plus3"></div>
-            <div class="minus1" id="minus1"></div>
-            <div class="minus2" id="minus2"></div>
-            <div class="minus3" id="minus3"></div>
+        <div id="start">
+          <div id="info">
+            <h3>Sådan her spiller du</h3>
+            <p>Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekagerne til morgenmad! 
+              <br>
+              <br>
+              Når en af nisserne viser sig fra en krukke, skal du trykke på den, så den gemmer sig igen.
+              <br>
+              <br>
+              Men pas på! Trykker du på kaptajnen tre gange, bliver nisserne opdaget!!!
+            </p>
           </div>
-          <div id="energy_board">
-            <div id="heart1" class="mistetliv"></div>
-            <div id="heart2" class="mistetliv"></div>
-            <div id="heart3" class="mistetliv"></div>
-          </div>
-          <div id="time_board"></div>
+          <div id="startknap"></div>
         </div>
-      </div>
-      <div id="start">
-        <div id="info">
-          <h3>Sådan her spiller du</h3>
-          <p>Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekagerne til morgenmad! 
-            <br>
-            <br>
-            Når en af nisserne viser sig fra en krukke, skal du trykke på den, så den gemmer sig igen.
-            <br>
-            <br>
-            Men pas på! Trykker du på kaptajnen tre gange, bliver nisserne opdaget!!!
-          </p>
+        <div id="gameover">
+          <div id="tryagain1"></div>
         </div>
-        <div id="startknap"></div>
-      </div>
-      <div id="gameover">
-        <div id="tryagain1"></div>
-      </div>
-
-      <div id="levelcomplete">
-        <div id="tryagain2"></div>
+  
+        <div id="levelcomplete">
+          <div id="tryagain2"></div>
+        </div>
       </div>
     </div>
-  </div>
 
     <div id="sounds">
       <audio src="sounds/mmm.mp3" id="sound_sigurd" controls></audio>
@@ -110,5 +111,11 @@
       <audio src="sounds/ørn.mp3" id="sound_ørn" controls></audio>
     </div>
     <script src="script.js"></script>
+    <script>
+      window.addEventListener("load", function(){
+        document.getElementById("screen").classList.remove("hideall")
+        document.getElementById("preloader").classList.add("hide")
+      })
+    </script>
   </body>
 </html>
