chore: :ambulance: Add new game info text
Some info text that helps the player understand the game better

No bugs i hope :|

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
               Når en af nisserne viser sig fra en krukke, skal du trykke på den, så den gemmer sig igen.
               <br>
               <br>
+              Dit mål er at få fat i mindst 10 pandekage
+              <br>
+              <br>
               Men pas på! Trykker du på kaptajnen tre gange, bliver nisserne opdaget!!!
             </p>
           </div>
