fix: :pencil2: fixed 2 typos
fixed 2 typos in game info

no bugs

--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
         <div id="start">
           <div id="info">
             <h3>Sådan her spiller du</h3>
-            <p>Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekagerne til morgenmad! 
+            <p>Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekager til morgenmad! 
               <br>
               <br>
               Når en af nisserne viser sig fra en krukke, skal du trykke på den, så den gemmer sig igen.
               <br>
               <br>
-              Dit mål er at få fat i mindst 10 pandekage
+              Dit mål er at få fat i mindst 10 pandekager
               <br>
               <br>
               Men pas på! Trykker du på kaptajnen tre gange, bliver nisserne opdaget!!!
