feat: :sparkles: Added voicebox for e-reading
added a voicebox that can tell the user how to play the game, if they cant read :)

No bugs that i'm are aware of

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="preloader"></div>
       <div id="blackout">
         <div id="blackout_text">
+          <img src="images/animation_300_l16bpmtn.gif" alt="">
           <p>Vend skærmen vandret for at spille!</p>
         </div>
       <div id="screen" class="hideall">
@@ -76,15 +77,19 @@
           </div>
         </div>
         <div id="start">
+          <div id="AudioPlayer">
+            <img class="forside_Audio" src="images/animation_500_l154aneo.gif" alt="">
+            <img class="bagside_Audio" src="svgs/hue m tale.svg" alt="">
+          </div>
           <div id="info">
-            <h3>Sådan her spiller du</h3>
+            <h3>Sådan spiller du</h3>
             <p>Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekager til morgenmad! 
               <br>
               <br>
               Når en af nisserne viser sig fra en krukke, skal du trykke på den, så den gemmer sig igen.
               <br>
               <br>
-              Dit mål er at få fat i mindst 10 pandekager
+              Du skal samle 10 pandekager inden havørnen flyver ud af kahytten
               <br>
               <br>
               Men pas på! Trykker du på kaptajnen tre gange, bliver nisserne opdaget!!!
@@ -112,6 +117,7 @@
       <audio src="sounds/vinder.mp3" id="sound_vinder" controls></audio>
       <audio src="sounds/baggrundlyd.mp3" id="sound_baggrund" controls></audio>
       <audio src="sounds/ørn.mp3" id="sound_ørn" controls></audio>
+      <audio src="sounds/infomation.mp3" id="info_sound" controls></audio>
     </div>
     <script src="script.js"></script>
     <script>
