fix: :lipstick: Changed ui
Changed the location of the pancake counter and added text to the losing screen

no bugs

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
               <div id="prøvIgen" onclick="reload()">
                 <img class="forside_Prøv" src="svgs/arrow.svg" alt="">
               </div>
+              <div id="Wininfo">
+                <p>
+                  Vi nåede det ikke! <br> Mon de morgenmadssultne <br> skibsnisser for en ny <br> chance i morgen?
+                </p>
+              </div>
             </div>
       
             <div id="levelcomplete">
@@ -109,10 +114,10 @@
               <div id="prøvIgen" onclick="reload()">
                 <img class="forside_Prøv" src="svgs/arrow.svg" alt="">
               </div>
-              <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_0y2x6xwo.json" background="transparent"  speed="0.5"  style="width: 120%; height: 120%;" loop autoplay></lottie-player>
+              <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_0y2x6xwo.json" background="transparent"  speed="0.5"  style="width: 120%; height: 120%;  position: absolute; top: -5px;" loop autoplay></lottie-player>
               <div id="Wininfo">
                 <p>
-                  Vi nåede det! <br> Mon de morgenmadssultne <br> skibsnisser kan klemme en <br> lille pandekage ned mere?
+                  Vi nåede det! <br> Mon de morgenmadssultne <br> skibsnisser kan klemme en <br> lille pandekage ned?
                 </p>
               </div>
             </div>
