--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
             <div id="gameover">
               <!-- <div id="tryagain1"></div> -->
               <div id="prøvIgen" onclick="reload()">
-                <img class="forside_Prøv" src="svgs/arrow.svg" alt="">
+                <img class="forside_Prøv" src="images/arrow.png" alt="">
               </div>
               <div id="Wininfo">
                 <p>
-                  Vi nåede det ikke! <br> Mon de morgenmadssultne <br> skibsnisser for en ny <br> chance i morgen?
+                  Vi nåede det ikke! <br> Mon de morgenmadssultne <br> skibsnisser får en ny <br> chance i morgen?
                 </p>
               </div>
             </div>
@@ -112,12 +112,12 @@
             <div id="levelcomplete">
               <!-- <div id="tryagain2"></div> -->
               <div id="prøvIgen" onclick="reload()">
-                <img class="forside_Prøv" src="svgs/arrow.svg" alt="">
+                <img class="forside_Prøv" src="images/arrow.png" alt="">
               </div>
               <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_0y2x6xwo.json" background="transparent"  speed="0.5"  style="width: 120%; height: 120%;  position: absolute; top: -5px;" loop autoplay></lottie-player>
               <div id="Wininfo">
                 <p>
-                  Vi nåede det! <br> Mon de morgenmadssultne <br> skibsnisser kan klemme en <br> lille pandekage ned?
+                  Vi nåede det! <br> Mon de morgenmadssultne <br> skibsnisser kan klemme <br> flere pandekager ned?
                 </p>
               </div>
             </div>
