--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Det Store PandeKageKup</title>
+    <title>Det Store Pandekagekup</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
