feat: :art: Nothing really
Nope

NAh

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </div>
               <div id="game_ui">
                 <div id="score_board">
-                  <div class="saek"></div>
+                  <div class="saek" id="pewpew"></div>
                   <div class="antal">0</div>
                   <div class="plus1" id="plus1"></div>
                   <div class="plus2" id="plus2"></div>
@@ -83,7 +83,7 @@
                 <img class="bagside_Audio" src="svgs/hue m tale.svg" alt="">
               </div>
               <div id="info">
-                <p>Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekager til morgenmad! 
+                <p id="info_text">Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekager til morgenmad! 
                   <br>
                   <br>
                   Når en af nisserne viser sig fra en krukke, skal du trykke på den, så den gemmer sig igen.
@@ -136,6 +136,7 @@
       <audio src="sounds/baggrundlyd.mp3" id="sound_baggrund" controls></audio>
       <audio src="sounds/ørn.mp3" id="sound_ørn" controls></audio>
       <audio src="sounds/infomation.mp3" id="info_sound" controls></audio>
+      <audio src="sounds/kids_cheering.mp3" id="kids_sound" controls></audio>
     </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
