fix: :bug: Last bugs
Removed the last remaining bugs

No bugs!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div id="start">
               <div id="AudioPlayer">
                 <img class="forside_Audio" src="images/animation_500_l154aneo.gif" alt="">
-                <img class="bagside_Audio" src="svgs/hue m tale.svg" alt="">
+                <img class="bagside_Audio" src="svgs/speaker.svg" alt="">
               </div>
               <div id="info">
                 <p id="info_text">Nisserne, Sigurd, Saga og Saxo, vil have alle kaptajnens pandekager til morgenmad! 
